# plugins

./: .gitignore  .gitmodules  CONTRIBUTING-zh-CN.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  biome.json  changelog.config.js  commitlint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
rust-plugins/auto-import/: CHANGELOG.md  Cargo.toml  options.d.ts  package.json  pnpm-lock.yaml
rust-plugins/auto-import/npm/darwin-x64/: README.md  package.json
rust-plugins/auto-import/npm/linux-x64-gnu/: README.md
rust-plugins/auto-import/npm/linux-x64-musl/: README.md
rust-plugins/auto-import/npm/win32-ia32-msvc/: package.json
rust-plugins/auto-import/npm/win32-x64-msvc/: README.md
rust-plugins/auto-import/playground-react/: auto_import.d.ts  farm.config.ts  package.json
rust-plugins/auto-import/playground-react/src/: main.tsx
rust-plugins/auto-import/playground-vue/: package.json
rust-plugins/auto-import/scripts/: index.js
rust-plugins/auto-import/src/: finish_imports.rs  lib.rs
rust-plugins/auto-import/src/parser/: generate_dts.rs  inject_imports.rs  parse.rs  scan_dirs_exports.rs  scan_exports.rs
rust-plugins/auto-import/src/presets/: mod.rs
rust-plugins/component/: Cargo.toml  README.md  options.d.ts  package.json  pnpm-lock.yaml
rust-plugins/component/npm/darwin-arm64/: README.md  package.json
rust-plugins/component/npm/darwin-x64/: README.md  package.json
rust-plugins/component/npm/linux-arm64-gnu/: README.md  package.json
rust-plugins/component/npm/linux-arm64-musl/: README.md  package.json
rust-plugins/component/npm/linux-x64-gnu/: README.md  package.json
rust-plugins/component/npm/linux-x64-musl/: README.md  package.json
rust-plugins/component/npm/win32-arm64-msvc/: README.md  package.json
rust-plugins/component/npm/win32-ia32-msvc/: README.md  package.json
rust-plugins/component/npm/win32-x64-msvc/: README.md  package.json
rust-plugins/component/playground/: farm.config.ts  package.json
rust-plugins/component/playground/src/: main.tsx
rust-plugins/component/scripts/: index.js
rust-plugins/component/src/: default.rs  lib.rs  options.rs  transform.rs
rust-plugins/compress/: CHANGELOG.md  Cargo.toml  options.d.ts  package.json  pnpm-lock.yaml
rust-plugins/compress/playground/: farm.config.ts  package.json
rust-plugins/compress/src/: lib.rs  utils.rs
rust-plugins/dsv/: CHANGELOG.md  Cargo.toml  package.json
rust-plugins/dsv/src/: lib.rs
rust-plugins/glsl/: Cargo.toml  package.json
rust-plugins/glsl/npm/darwin-arm64/: README.md  package.json
rust-plugins/glsl/npm/darwin-x64/: README.md  package.json
rust-plugins/glsl/npm/linux-arm64-gnu/: README.md  package.json
rust-plugins/glsl/npm/linux-arm64-musl/: README.md  package.json
rust-plugins/glsl/npm/linux-x64-gnu/: README.md  package.json
rust-plugins/glsl/npm/linux-x64-musl/: README.md  package.json
rust-plugins/glsl/npm/win32-arm64-msvc/: README.md  package.json
rust-plugins/glsl/npm/win32-ia32-msvc/: README.md  package.json
rust-plugins/glsl/npm/win32-x64-msvc/: README.md  package.json
rust-plugins/glsl/playground/: farm.config.ts  package.json
rust-plugins/glsl/scripts/: index.js
rust-plugins/glsl/src/: lib.rs  load_shader.rs
rust-plugins/icons/: CHANGELOG.md  Cargo.toml  package.json
rust-plugins/icons/npm/darwin-arm64/: README.md  package.json
rust-plugins/icons/npm/linux-arm64-gnu/: README.md
rust-plugins/icons/npm/linux-arm64-musl/: package.json
rust-plugins/icons/npm/linux-x64-gnu/: README.md
rust-plugins/icons/npm/linux-x64-musl/: package.json
rust-plugins/icons/npm/win32-arm64-msvc/: README.md  package.json
rust-plugins/icons/npm/win32-ia32-msvc/: README.md
rust-plugins/icons/npm/win32-x64-msvc/: package.json
rust-plugins/icons/playground-react/: farm.config.ts
rust-plugins/icons/playground-react/src/: index.ts  main.tsx
rust-plugins/icons/playground-vue/: farm.config.ts
rust-plugins/icons/scripts/: index.js
rust-plugins/icons/src/: lib.rs
rust-plugins/icons/src/cache/: mod.rs
rust-plugins/icons/src/compiler/: mod.rs  preact.rs  react.rs  svelte.rs  vue.rs
rust-plugins/icons/src/loader/: common.rs  icon_data.rs  icon_to_svg.rs  mod.rs  svg_modifier.rs
rust-plugins/magic-comments/: Cargo.toml  package.json
rust-plugins/magic-comments/playground/: farm.config.ts  package.json
rust-plugins/magic-comments/scripts/: index.js
rust-plugins/magic-comments/src/: html_modifier.rs  lib.rs
rust-plugins/react-components/: CHANGELOG.md  Cargo.toml  package.json  pnpm-lock.yaml
rust-plugins/react-components/playground/: package.json
rust-plugins/react-components/src/: find_local_components.rs  finish_components.rs  lib.rs
rust-plugins/react-components/tests/: mod.rs
rust-plugins/svgr/: CHANGELOG.md  Cargo.toml  README.md  package.json
rust-plugins/svgr/src/: react_compiler.rs
rust-plugins/url/: CHANGELOG.md  Cargo.toml  package.json  pnpm-lock.yaml
rust-plugins/url/playground/: package.json
rust-plugins/url/scripts/: index.js
rust-plugins/url/src/: lib.rs
rust-plugins/vue-jsx/: Cargo.toml  package.json  pnpm-lock.yaml
rust-plugins/vue-jsx/playground/: farm.config.ts  package.json
rust-plugins/vue-jsx/scripts/: index.js
rust-plugins/vue-jsx/src/: lib.rs
rust-plugins/vue-jsx/test/: mod.rs
rust-plugins/wasm/: CHANGELOG.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
rust-plugins/wasm/playground/: farm.config.ts  package.json
rust-plugins/wasm/rust-wasm/: Cargo.toml  LICENSE_MIT
rust-plugins/wasm/scripts/: index.js
rust-plugins/wasm/src/: lib.rs  utils.rs  wasm_runtime.js
rust-plugins/worker/: CHANGELOG.md  Cargo.toml  README-zh-CN.md  README.md  options.d.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
rust-plugins/worker/farm_worker/: cspell.config.yaml  farm.config.ts  index.html  package.json  pnpm-lock.yaml
rust-plugins/worker/playground/: farm.config.ts  package.json
rust-plugins/worker/scripts/: index.js
rust-plugins/worker/src/: cache.rs  lib.rs
rust-plugins/worker/tests/: mod.rs
(+351 files in other folders)
