[workspace]
members = [
  "rust-plugins/*",
]
resolver = "2"
[workspace.dependencies]
farmfe_core = { version = "2.0.0" }
farmfe_utils = { version = "2.0.0" }
farmfe_toolkit_plugin_types = { version = "0.0.24" }
farmfe_macro_plugin = { version = "2.0.0" }
farmfe_toolkit = "2.0.0"
farmfe_compiler = { version = "0.0.16" }
