[package]
edition = "2021"
name = "farmfe_plugin_auto_import"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
farmfe_core = { workspace = true }
farmfe_utils = { workspace = true }
farmfe_toolkit_plugin_types = { workspace = true }
farmfe_macro_plugin = { workspace = true }
farmfe_toolkit = { workspace = true }
farm-plugin-shared = { path = "../shared" }

serde = { version = "1.0.197", features = ["derive"] }
glob = "0.3.1"
walkdir = "2.5.0"
regress = "0.10.1"
