[package]
edition = "2021"
name = "farmfe_plugin_component"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
farmfe_core = { version = "*" }
farmfe_toolkit_plugin_types = { version = "*" }
farmfe_macro_plugin = { version = "*" }
serde = "1.0.197"
serde_json = "1.0.116"
regex = "1.10.6"