[package]
edition = "2021"
name = "farmfe_plugin_compress"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
farmfe_core = { version = "*" }
farmfe_toolkit_plugin_types = { version = "*" }
farmfe_macro_plugin = { version = "*" }
farm-plugin-shared = { path = "../shared" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
flate2 = { version = "1.0.35", features = ["zlib"] }
brotli = "7.0.0"
