[package]
edition = "2021"
name = "farmfe_plugin_compress"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
farmfe_core = { workspace = true }
farmfe_toolkit_plugin_types = { workspace = true }
farmfe_macro_plugin = { workspace = true }
farmfe_toolkit = { workspace = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
flate2 = { version = "1.0.35", features = ["zlib"] }
brotli = "7.0.0"
