[package]
edition = "2021"
name = "farmfe_plugin_dsv"
version = "0.0.1"
authors = ["CCherry07 <c_chenjunguang@163.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
farmfe_core = { workspace = true }
farmfe_toolkit_plugin_types = { workspace = true }
farmfe_macro_plugin = { workspace = true }
csv = "1.3.0"
serde = "1.0.197"
serde_json = "1.0.116"
farmfe_toolkit = {workspace = true}
