[package]
edition = "2021"
name = "farmfe_plugin_glsl"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
farmfe_core = { workspace = true }
farmfe_toolkit_plugin_types = { workspace = true }
farmfe_macro_plugin = { workspace = true }
lazy_static = "1.5.0"
serde = "1.0.214"
once_cell = "1.20.2"
regex = "1.11.1"
