[package]
edition = "2021"
name = "farmfe_plugin_icons"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
farmfe_core = { workspace = true }
farmfe_toolkit_plugin_types = { workspace = true }
farmfe_macro_plugin = { workspace = true }
farmfe_toolkit = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
farmfe_utils = "0.1.4"
svgr-rs = "0.1.2"
once_cell = "1.19.0"
fervid = "0.2.0"
# reqwest = "0.12.5"
tokio = { version = "1.38.0", features = ["full"] }
walkdir = "2.5.0"
xmltree = "0.10.3"
reqwest = "0.12.9"
cached = {version = "0.53.1", features = ["disk_store"]}
bincode = "1.3.3"
loading = "0.4.0"
