[package]
edition = "2021"
name = "farmfe_plugin_react_components"
version = "0.0.1"
authors = ["CCherry07 <c_chenjunguang@163.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
farmfe_core = { workspace = true }
farmfe_utils = { workspace = true }
farmfe_toolkit_plugin_types = { workspace = true }
farmfe_macro_plugin = { workspace = true }
farmfe_toolkit = { workspace = true }

serde = { version = "1.0.197", features = ["derive"] }
glob = "0.3.1"
walkdir = "2.5.0"
rustc-hash = "2.1.1"
