[package]
edition = "2021"
name = "farmfe_plugin_url"
version = "0.0.1"
authors = ["CCherry07 <c_chenjunguang@163.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
farmfe_core = { workspace = true }
farmfe_toolkit_plugin_types = { workspace = true }
farmfe_macro_plugin = { workspace = true }
serde = { version = "1.0.197", features = ["derive"] }
farmfe_toolkit = { workspace = true }
base64 = "0.22.1"
mime_guess = "2.0.5"
lazy_static = "1.5.0"
farmfe_utils = "0.1.4"
