[package]
edition = "2021"
name = "farmfe_plugin_vue_jsx"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
farmfe_core = { workspace = true }
farmfe_toolkit_plugin_types = { workspace = true }
farmfe_macro_plugin = { workspace = true }
farmfe_toolkit = { workspace = true }
vue_jsx_visitor = { path = "./crates/visitor" }
serde = { version = "1.0.197", features = ["derive"] }
