[package]
edition = "2021"
name = "farmfe_plugin_wasm"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
farmfe_core = { workspace = true }
farmfe_toolkit_plugin_types = { workspace = true }
farmfe_macro_plugin = { workspace = true }
farmfe_toolkit = { workspace = true }
rkyv = { version = "0.8.10" }
wasmparser = "0.225.0"
