[package]
edition = "2021"
name = "farmfe_plugin_worker"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
farmfe_core = { version = "*" }
farmfe_toolkit_plugin_types = { version = "*" }
farmfe_macro_plugin = { version = "*" }
farmfe_toolkit = "*"
farmfe_compiler = "0.0.11"
serde = "1.0.213"
regress = "0.10.1"
base64 = "0.22.1"
farmfe_utils.workspace = true
