[package]
edition = "2021"
name = "farmfe_plugin_worker"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
farmfe_core = { workspace = true }
farmfe_utils = { workspace = true }
farmfe_toolkit_plugin_types = { workspace = true }
farmfe_macro_plugin = { workspace = true }
farmfe_toolkit = { workspace = true }
farmfe_compiler = "0.0.13"
serde = "1.0.213"
regress = "0.10.1"
base64 = "0.22.1"
rkyv = { version = "0.7.42" }
