[package]
edition = "2021"
name = "farmfe_plugin_worker"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
farmfe_core = { workspace = true }
farmfe_utils = { workspace = true }
farmfe_toolkit_plugin_types = { workspace = true }
farmfe_macro_plugin = { workspace = true }
farmfe_toolkit = { workspace = true }
farmfe_compiler = { workspace = true }
serde = "1.0.213"
regress = "0.10.1"
base64 = "0.22.1"
rkyv = "0.8.10"
