[package]
name = "vue_jsx_visitor"
description = "SWC visitor for transforming Vue JSX."
version = "0.3.2"
license = "MIT"
edition = "2021"

[dependencies]
bitflags = "2.4"
css_dataset = "0.3"
fnv = "1.0"
indexmap = "2.1"
regex = "1.10"
farmfe_core = { workspace = true }
farmfe_toolkit = { workspace = true }
serde = { version = "1.0.210", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
testing = "0.38"
